minijasmine: Unref context on error

We have to unref the GjsContext before exiting or JS_ShutDown() will
segfault. For convenience, stick the unref in bail_out().

https://bugzilla.gnome.org/show_bug.cgi?id=777205